Добавил таблицу статусов
