# openapi.yaml
@@ -9,21 +9,154 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.0.1
+  version: 0.0.6
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: https://bbasntee4s9pbtmrrvb1.containers.yandexcloud.net
+  - url: https://bbasntee4s9pbtmrrvb1.containers.yandexcloud.net 
+  - url: http://localhost:8082
 tags:
-  - name: Incidents
+  - name: statuses
+    description: Работа со статусами заявок
+  - name: incidents
     description: Работа с заявками
     externalDocs:
       description: Find out more
       url: http://swagger.io
-  - name: user
-    description: Operations about user
+  - name: users
+    description: работа с пользователями
 paths:
+  /statuses:
+    x-ogen-operation-group: Statuses
+    put:
+      tags:
+        - statuses
+      summary: Обновление существующего статуса
+      description: Update an existing status by Id
+      operationId: updateStatus
+      requestBody:
+        description: Update an existent status in the system
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Status'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Status'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
+        '400':
+          description: Ошибочный ID статуса
+        '404':
+          description: Статус не найден
+        '422':
+          description: Validation exception
+    post:
+      tags:
+        - statuses
+      summary: добавление новой заявки
+      description: Add a new status
+      operationId: addStatus
+      requestBody:
+        description: Add a new status
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Status'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Status'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Status'
+        '400':
+          description: Invalid input
+        '422':
+          description: Validation exception
+    get:
+      tags:
+        - statuses
+      summary: получение списка заявок
+      description: list of statuses
+      operationId: getStatuses
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatususResponse'
+        '400':
+          description: Invalid value
+  /statuses/{statusId}:
+    x-ogen-operation-group: Statuses
+    get:
+      tags:
+        - statuses
+      summary: получение заявки по id
+      description: Returns a single incidents
+      operationId: getStatusById
+      parameters:
+        - name: statusId
+          in: path
+          description: ID of Status to return
+          required: true
+          schema:
+            type: string
+            description: status id
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Status'
+        '400':
+          description: Invalid ID 
+        '404':
+          description: Incidents not found
+
+    delete:
+      tags:
+        - statuses
+      summary: Deletes an status
+      description: delete an status
+      operationId: deleteStatus
+      parameters:
+        - name: statusId
+          in: path
+          description: request id to delete
+          required: true
+          schema:
+            type: string
+            description: status id
+      responses:
+        '200':
+          description: successful operation
+        '400':
+          description: Invalid value
+          
+          
+          
+          
   /incidents:
     x-ogen-operation-group: Incidents
     put:
@@ -146,16 +279,138 @@ paths:
             type: string
             description: incident id
       responses:
+        '200':
+          description: successful operation
         '400':
           description: Invalid value
+  /user:
+    x-ogen-operation-group: Users
+    get:
+      tags:
+        - users
+      summary: получение пользователя
+      description: Returns a user
+      operationId: getUser
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid user 
+        '404':
+          description: user not found
+  /checksms:
+    x-ogen-operation-group: Users
+    get:
+      tags:
+        - users
+      summary: Получение токена
+      description: Returns a token
+      operationId: CheckSms
+      parameters:
+        - name: phone
+          in: header
+          description: phone of user
+          required: true
+          schema:
+            type: string
+            description: phone
+        - name: sms
+          in: header
+          description: sms
+          required: true
+          schema:
+            type: string
+            description: sms     
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: Invalid param 
+        '404':
+          description: check error 
+  /sendsms:
+    x-ogen-operation-group: Users
+    get:
+      tags:
+        - users
+      summary: Отправка СМС
+      description: Returns a token
+      operationId: SendSms
+      parameters:
+        - name: phone
+          in: header
+          description: phone of user
+          required: true
+          schema:
+            type: string
+            description: phone
+      responses:
+        '200':
+          description: successful operation
+        '400':
+          description: Invalid param 
+        '404':
+          description: check error 
+  /logout:
+    x-ogen-operation-group: Users
+    get:
+      tags:
+        - users
+      summary: Выход из акаунта
+      description: Удаляет сессию пользователя 
+      operationId: Logout
+      responses:
+        '200':
+          description: successful operation
+        '400':
+          description: Invalid param 
+        '404':
+          description: check error 
 components:
   schemas:
+    Status:
+      required:
+        - id
+        - name
+      type: object
+      properties:
+        id:
+          type: string
+          example: 123
+          description: status id
+        name:
+          type: string
+          example: Новая
+    StatususResponse:
+      required:
+        - trackingId
+        - status
+        - data
+      type: object
+      properties:
+        trackingId:
+          type: string
+        status:
+          type: string
+          default: Ok
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/Status"
     Incident:
       required:
         - id
         - region
         - fio
-        - status
+        - statusId
         - date
       type: object
       properties:
@@ -169,14 +424,35 @@ components:
         fio:
           type: string
           example: Иванов Иван Иванович
-        status:
+        statusId:
           type: string
-          example: новая
+          example: 123
         date:
           type: string
           format: DateTime
           example: '2024-12-19T17:01:39.000Z'
+    User:
+      required:
+        - id
+        - fio
+        - role
+      type: object
+      properties:
+        id:
+          type: string
+          example: 123
+          description: incident id
+        fio:
+          type: string
+          example: Иванов Иван Иванович
+        role:
+          type: string
+          example: Admin
     IncidentsResponse:
+      required:
+        - trackingId
+        - status
+        - data
       type: object
       properties:
         trackingId:
@@ -188,3 +464,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Incident"
+        statuses:
+          type: array
+          items:
+            $ref: "#/components/schemas/Status"
